# propetly

./: .gitignore  .prettierrc  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apiserver/: package.json  pyproject.toml
apiserver/apps/agencies/: admin.py  models.py
apiserver/apps/agencies/api/: serializers.py  urls.py  views.py
apiserver/apps/agencies/management/commands/: seed_data.py
apiserver/apps/agencies/migrations/: 0001_initial.py
apiserver/apps/employees/: apps.py  models.py
apiserver/apps/employees/api/v1/: serializers.py  urls.py  views.py
apiserver/apps/employees/migrations/: 0001_initial.py
apiserver/apps/properties/: admin.py  apps.py  models.py
apiserver/apps/properties/api/v1/: serializers.py  urls.py  views.py
apiserver/apps/properties/migrations/: 0001_initial.py
apiserver/config/: settings.py  urls.py
apps/web/: package.json
apps/web/src/: actions.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/agencies/: page.tsx
apps/web/src/app/agencies/[id]/: page.tsx
apps/web/src/app/agencies/[id]/edit/: page.tsx
apps/web/src/app/agencies/create/: page.tsx
